[gd_scene load_steps=15 format=3 uid="uid://beb6q63ksuk0t"]

[ext_resource type="PackedScene" uid="uid://2hs7ixln1dp" path="res://components/hurt_box_component.tscn" id="1_l34ok"]
[ext_resource type="Script" uid="uid://dkvd4sf72y4sy" path="res://components/health_component.gd" id="1_mdpbk"]
[ext_resource type="Script" uid="uid://cg4wqtn5b2p4y" path="res://entities/upgrade_option/upgrade_option.gd" id="1_yuvji"]
[ext_resource type="Texture2D" uid="uid://c1b8175uga1gs" path="res://assets/upgrade/upgrade_option.png" id="3_34j1a"]
[ext_resource type="PackedScene" uid="uid://bmyx0m8jsl56f" path="res://components/hit_flash_sprite_component.tscn" id="5_xoods"]
[ext_resource type="Shader" uid="uid://bhvmjp0tvswfp" path="res://resources/shaders/hit_flash_sprite_component.gdshader" id="6_27yqu"]

[sub_resource type="Animation" id="Animation_jncuo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashSpriteComponent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitFlashSpriteComponent:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBoxComponent/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_27yqu"]
resource_name = "despawn"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashSpriteComponent:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1.5, 1.5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtBoxComponent/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_xoods"]
resource_name = "idle"
length = 2.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashSpriteComponent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitFlashSpriteComponent:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -16), Vector2(0, -20)]
}

[sub_resource type="Animation" id="Animation_34j1a"]
resource_name = "spawn"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashSpriteComponent:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.5, 1.5), Vector2(0.9, 0.9), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xoods"]
_data = {
&"RESET": SubResource("Animation_jncuo"),
&"despawn": SubResource("Animation_27yqu"),
&"idle": SubResource("Animation_xoods"),
&"spawn": SubResource("Animation_34j1a")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_mdpbk"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jncuo"]
radius = 32.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xoods"]
resource_local_to_scene = true
shader = ExtResource("6_27yqu")
shader_parameter/percent = 0.0

[node name="UpgradeOption" type="Node2D" groups=["upgrade_option"]]
script = ExtResource("1_yuvji")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xoods")
}
next/spawn = &"idle"

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("1_mdpbk")
max_health = 10
metadata/_custom_type_script = "uid://dkvd4sf72y4sy"

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("1_l34ok")]
position = Vector2(0, -16)
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
shape = SubResource("CircleShape2D_mdpbk")

[node name="PlayerDectionArea" type="Area2D" parent="."]
position = Vector2(0, -18)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDectionArea"]
shape = SubResource("CircleShape2D_jncuo")

[node name="HitFlashSpriteComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_xoods")]
material = SubResource("ShaderMaterial_xoods")
position = Vector2(0, -16)
texture = ExtResource("3_34j1a")
health_component = NodePath("../HealthComponent")

[node name="InfoContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(192, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -80.0
offset_right = 96.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="TitleLabel" type="Label" parent="InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.831373, 0.172549, 0.309804, 1)
theme_override_constants/outline_size = 4
text = "Example Title"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="InfoContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
theme_override_constants/outline_size = 4
text = "Example Description"
horizontal_alignment = 1
autowrap_mode = 2
